--- a/utils/css/style.css
+++ b/utils/css/style.css
@@ -1,4 +1,4 @@
-.header .header__body .container--header-body, .header .header__top .header__top__nav .header__top__nav__li a, .header .header__top .header__top__nav, .header .header__top .header__top__figure, .header .header__top {
+.education .education__courses, .projects .projects--title, .header .header__body .container--header-body, .header .header__top .header__top__nav .header__top__nav__li a, .header .header__top .header__top__nav, .header .header__top .header__top__figure, .header .header__top {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,7 +16,6 @@
 }
 
 .header {
-  outline: 1px solid red;
   position: relative;
 }
 .header .header__top {
@@ -77,9 +76,184 @@
   position: absolute;
   z-index: 1;
 }
+.header .header__figure__img {
+  position: absolute;
+  bottom: 0;
+  left: 48%;
+  z-index: 1;
+}
+.header .header__figure__img:hover {
+  cursor: pointer;
+}
 
 .projects {
   outline: 1px solid green;
+  display: grid;
+  grid-template-rows: repeat(10, 10%);
+  grid-template-columns: repeat(10, 10%);
+  font-family: "Indie Flower", cursive;
+  background-image: url("../images/pintura.png");
+  background-position: center;
+  background-size: cover;
+}
+.projects .projects--title {
+  grid-column: 1/3;
+  font-size: 40px;
+}
+.projects .projects__four, .projects .projects__three, .projects .projects__two, .projects .projects__one {
+  border-radius: 20px;
+  margin: 1px;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.projects .projects__four h2, .projects .projects__three h2, .projects .projects__two h2, .projects .projects__one h2 {
+  font-family: "Russo One", sans-serif;
+}
+.projects .projects__one {
+  grid-column: 3/6;
+  grid-row: 2/4;
+  background-color: red;
+}
+.projects .projects__one .projects__one__h2 {
+  text-align: right;
+  margin-right: 10px;
+}
+.projects .projects__one .projects__one__figure__img {
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+}
+.projects .projects__one .projects__one__h3 {
+  text-align: right;
+  margin-right: 15px;
+}
+.projects .projects__two {
+  grid-column: 6/8;
+  grid-row: 3/7;
+  background-color: green;
+}
+.projects .projects__two .projects__two__h2 {
+  margin-left: 10px;
+}
+.projects .projects__two .projects__two__figure {
+  text-align: center;
+}
+.projects .projects__two .projects__two__figure .projects__two__figure__img {
+  width: 120px;
+  height: 120px;
+}
+.projects .projects__two .projects__two__h3 {
+  text-align: center;
+}
+.projects .projects__three {
+  grid-column: 4/6;
+  grid-row: 5/8;
+  background-color: khaki;
+}
+.projects .projects__three .projects__three__h2 {
+  text-align: right;
+  margin-right: 10px;
+}
+.projects .projects__three .projects__three__figure {
+  text-align: center;
+}
+.projects .projects__three .projects__three__figure .projects__three__figure__img {
+  width: 100px;
+  height: 100px;
+}
+.projects .projects__three .projects__three__h3 {
+  text-align: right;
+}
+.projects .projects__four {
+  grid-column: 6/9;
+  grid-row: 7/9;
+  background-color: lightseagreen;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+.projects .projects__four .projects__four__figure__img {
+  width: 100px;
+  height: 100px;
+}
+
+.education {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-template-rows: 7% 93%;
+}
+.education .education--title {
+  grid-column: 1/2;
+}
+.education .education__dev {
+  grid-column: 2/3;
+  grid-row: 1/3;
+  background-color: lightslategray;
+  display: grid;
+  grid-template-columns: repeat(3, 33.3%);
+  grid-template-rows: repeat(8, 12.5%);
+}
+.education .education__dev img {
+  width: 100px;
+  height: 100px;
+}
+.education .education__dev .education__dev__html {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.education .education__dev .education__dev__css {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+.education .education__dev .education__dev__sass {
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
+.education .education__dev .education__dev__js {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+.education .education__dev .education__dev__node {
+  grid-column: 1/2;
+  grid-row: 4/5;
+}
+.education .education__dev .education__dev__typescript {
+  grid-column: 3/4;
+  grid-row: 4/5;
+}
+.education .education__dev .education__dev__arduino {
+  grid-column: 1/2;
+  grid-row: 6/7;
+}
+.education .education__dev .education__dev__johnny-five {
+  grid-column: 3/4;
+  grid-row: 6/7;
+}
+.education .education__dev .education__dev__sql {
+  grid-column: 2/3;
+  grid-row: 5/6;
+}
+.education .education__dev .education__dev__git {
+  grid-column: 1/2;
+  grid-row: 8/9;
+}
+.education .education__dev .education__dev__others {
+  grid-column: 3/4;
+  grid-row: 8/9;
+}
+.education .education__courses {
+  background-color: lightyellow;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  flex-wrap: wrap;
+}
+.education .education__courses img {
+  margin: 10px;
+  width: 130px;
+  height: 100px;
 }
 
 /*# sourceMappingURL=style.css.map */
