--- a/utils/css/style.css
+++ b/utils/css/style.css
@@ -33,6 +33,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   margin-left: 10px;
+  font-family: "Source sand serif";
   cursor: pointer;
 }
 .nav a .point--contact, .nav a .point--education, .nav a .point--projects, .nav a .point--header {
@@ -40,6 +41,7 @@ body {
   width: 30px;
   cursor: pointer;
   font-size: 30px;
+  transition: 1s;
 }
 .nav a .point--contact--title, .nav a .point--education--title, .nav a .point--projects--title, .nav a .point--header--title {
   position: absolute;
@@ -289,7 +291,7 @@ body {
   margin: 15px;
 }
 .education .education__dev .education__dev__sql__img {
-  height: 70px;
+  height: 60px;
 }
 
 .footer {
