--- a/utils/css/style.css
+++ b/utils/css/style.css
@@ -131,9 +131,9 @@ body {
   grid-template-rows: repeat(10, 10%);
   grid-template-columns: repeat(10, 10%);
   font-family: "Indie Flower", cursive;
-  background-image: url("../images/pintura.jpg");
-  background-position: center;
+  background-image: url(../images/pintura.jpg);
   background-size: cover;
+  background-position: center;
 }
 .projects .projects--title {
   grid-column: 2/4;
@@ -351,6 +351,8 @@ body {
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 50px;
   margin-right: 20px;
+  opacity: 0;
+  transition: 1s;
 }
 .education .education__dev img {
   width: 100px;
